# deepstate-files

./: CMakeLists.txt  README.md  build.sh
deepstate/: CMakeLists.txt
executable/: CMakeLists.txt  Distributive.cpp
